# to-do-list

./: README.md  pyproject.toml
to_do_list/: db.sqlite3
to_do_list/to_do_list/: settings.py  urls.py
todo/: db.sqlite3
todo/todo/: settings.py  urls.py
todo/todo_api/: views.py
